--- a/style.css
+++ b/style.css
@@ -215,6 +215,10 @@ p a:hover {
         font-size: 15px; /* Further reduced font size for smaller screens */
     }
 
+    header nav {
+    display: flex;
+    gap: 10px;
+}
     header nav a {
         font-size: 10px;
         font-weight: 600;
